# opsfleet-agent

./: .env.example  .gitignore  README.md  architecture.mmd  pyproject.toml  requirements.txt
app/: __init__.py  cli.py
app/backends/: __init__.py  bq_runner.py  model_gateway.py
app/boot/: __init__.py  env_vars.py  load_settings.py
app/orchestration/: __init__.py  build_flow.py  run_once.py  session_state.py
app/orchestration/adapters/: __init__.py  bq_tools.py
app/orchestration/instructions/: __init__.py  analysis.md
app/orchestration/stages/: __init__.py  analyst.py  stage_base.py
settings/: agent-settings.yaml
